Fix 46 Sonar issues across 7 files
Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/9b396708-44cc-4f1a-8217-e6ee8015ad09

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>